[Fixes #643] Plane Counter Overflow workaround
i need more connection and... shia le bouf motivation #justdoit

--- a/src/pages/strategy/tabs/event/event.css
+++ b/src/pages/strategy/tabs/event/event.css
@@ -523,7 +523,7 @@
 	float:left;
 }
 .tab_event .sortie_list .node_airicon {
-	width:20px;
+	width:18px;
 	height:20px;
 	line-height:20px;
 	float:left;
@@ -537,11 +537,15 @@
 	margin:1px;
 }
 .tab_event .sortie_list .node_airtext {
-	width:38px;
+	width:40px;
 	height:20px;
 	float:left;
 	/*background:#fcc;*/
 	font-size:11px;
+}
+.tab_event .sortie_list .node_airtext .node_FAT ,
+.tab_event .sortie_list .node_airtext .node_BAT {
+	float: left;
 }
 .tab_event .sortie_list .node_airtext .node_loss {
 	color:#f00;
